<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <!-- faz com que apenas seja possivel clicar num icon da sidebar-->
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_one"
              android:icon="@drawable/search_examples"
              android:title="@string/menu_exemplos"/>

        <item android:id="@+id/nav_two"
              android:icon="@drawable/ic_search_black_24dp"
              android:title="@string/menu_pesquisar"/>

        <item android:id="@+id/nav_ten"
              android:icon="@drawable/ic_search_black_24dp"
              android:title="@string/key_pesquisar_url"/>

        <item android:id="@+id/nav_three"
              android:icon="@drawable/ic_info_black_24dp"
              android:title="@string/menu_sobre"/>

        <item android:id="@+id/nav_four"
              android:icon="@drawable/ic_team_24dp"
              android:title="@string/menu_equipa">
        </item>
        <item android:id="@+id/nav_six"
              android:icon="@drawable/ic_thumb_up_black_24dp"
              android:title="@string/key_agradecimentos">

        </item>

        <item android:id="@+id/nav_nine"
              android:icon="@drawable/ic_perm_media_black_24dp"
              android:title="Media">

        </item>
        <item android:id="@+id/nav_eight"
              android:icon="@drawable/ic_import_contacts_black_24dp"
              android:title="@string/key_contactos">
        </item>
        <item android:id="@+id/nav_five"
              android:icon="@drawable/ic_flag_black_24dp"
              android:title="@string/lingua">
        </item>


    </group>
</menu>