<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundMain"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintclick"
            android:layout_width="match_parent"
            android:background="@color/backgroundMain"
            android:padding="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:layout_height="wrap_content">

    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/aux2"
              app:layout_constraintBottom_toTopOf="@id/constraint"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:textColor="#FFFFFF"
              android:autoSizeMinTextSize="25sp"
              android:autoSizeMaxTextSize="50sp"
              app:autoSizeTextType="uniform"
              android:maxLines="2"
              app:layout_constraintVertical_bias="0.1"
             android:inputType="textMultiLine"
              android:text="@string/key_url_titulo" android:gravity="center" android:textSize="35sp"
    />






    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:id="@+id/constraint"
                                                       android:paddingTop="40dp"
                                                       android:paddingBottom="20dp"
                                                       app:layout_constraintTop_toBottomOf="@id/aux2"
                                                       android:layout_height="wrap_content">

        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/searchbar"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
                  android:paddingStart="20dp"
                  android:paddingEnd="50dp"
                  android:background="@drawable/url_search_edittext"
                  android:textColorHint="#555555"
                  android:textColor="#555555"
                  android:maxLines="1"
                  android:inputType="text"
                  android:gravity="center_vertical"
                  app:layout_constraintTop_toTopOf="parent"
                  android:hint="@string/key_hint_url"
        />

        <ImageView
                app:layout_constraintEnd_toEndOf="@id/searchbar"
                android:id="@+id/imagePesquisa"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="20dp"
                android:paddingEnd="20dp"
                app:srcCompat="@drawable/ic_search_black_24dp"
                android:layout_centerVertical="true"
                android:text="Button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/info2"
              android:paddingTop="10dp"
              android:layout_marginTop="10dp"
              android:paddingStart="10dp"
              app:layout_constraintTop_toBottomOf="@id/constraint"
              app:layout_constraintBottom_toTopOf="@id/constraint_seekbar"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:textColor="#FFFFFF"
              android:text="@string/key_maxngram" android:gravity="center" android:textSize="20sp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_seekbar"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/info2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:thumbTint="#ffffff"
                android:progressBackgroundTint="#ffffff"
                android:progressTint="#ffffff"
                android:progress="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/info"
                  android:paddingStart="10dp"
                  app:layout_constraintStart_toEndOf="@id/seekBar"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:textColor="#FFFFFF"
                  android:text="@string/key_default_termos" android:gravity="center" android:textSize="20sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>